--- a/index.html
+++ b/index.html
@@ -18,46 +18,53 @@
             <section>
                 <h2>CONTACT</h2>
                 <!-- contact info including social media -->
-                <p>
+                <p id="email">
                     <a href="mailto:author.m.tanasov@gmail.com">author.m.tanasov@gmail.com</a>
                 </p>
-                <p>
-                    <a href="github.com/author.m.tanasov">author.m.tanasov</a>
+               <p id="tel">
+                <a href="https://t.me/Maksym_Serg">telegram</a>
+               </p>
+            </section>
+            <section>
+                <h2>OBJECTIVE
+                </h2>
+                <p>Help each client and company achieve their goals
                 </p>
-
             </section>
             <section>
                 <h2>SKILLS</h2>
                 <!-- your skills -->
-                <p>SEO Writing (Intermediate)
-                </p>
-                <p>Web Page Writer (Upper Intermediate)
-                </p>
-                <p>Creative Writing (Upper Intermediate)
-                </p>
-                <p>Business Writing (Upper Intermediate)
-                </p>
-                <p>Article Writing (Upper Intermediate)
-                </p>
-                <p>Content Writing (Upper Intermediate)
-                </p>
-                <p>Copywriting (Proficient)
-                </p>
-                <p>Blogging (Proficient)
-                </p>
+                <ul>
+                <li>SEO Writing (Intermediate)
+                </li>
+                <li>Web Page Writer (Upper Intermediate)
+                </li>
+                <li>Creative Writing (Upper Intermediate)
+                </li>
+                <li>Business Writing (Upper Intermediate)
+                </li>
+                <li>Article Writing (Upper Intermediate)
+                </li>
+                <li>Content Writing (Upper Intermediate)
+                </li>
+                <li>Copywriting (Proficient)
+                </li>
+                <li>Blogging (Proficient)
+                </li>
+            </ul>
             </section>
             <section>
                 <h2>EDUCATION</h2>
                 <!-- your education -->
-            <h3>The young specialist in enterprise economics</h3>
-<p>COLLEGE REAL ESTATE </p>
-<p>2005-2008</p>
-<h3>Marketing Specialist</h3>
-<p>UNIVERSITY FOR INVESTMENT MANAGEMENT </p>
-<p>2008-2011</p>
-<h3>Certified Copywriter</h3>
-<p>Highly professional copywriting courses </p>
-<p>2021</p>
+                <h3>The young specialist in enterprise economics</h3>
+                <p>COLLEGE REAL ESTATE </p>
+                <p>2005-2008</p>
+                <h3>Marketing Specialist</h3>
+                <p>UNIVERSITY FOR INVESTMENT MANAGEMENT </p>
+                <p>2008-2011</p>
+                <h3>Certified Copywriter</h3>
+                <p>Highly professional copywriting courses </p>
+                <p>2021</p>
             </section>
         </article>
         <article id="mainRight">
@@ -65,13 +72,33 @@
                 <h2>WORK EXPERIENCE</h2>
                 <!-- your work experience -->
                 <h3>COPYWRITER, FREELANCE WORK </h3>
-            <p>Self-employed | 2020-2023</p>
-            <ul>
-                <li>Created unique SEO texts for clients</li>
-                <li>Paid great attention to detail when editing and proofreading content to ensure accuracy, grammar, and style</li>
-                <li>Possessed writing skills to create compelling and informative content that resonated with readers</li>
-                <li>Experience in writing B2B, B2C articles</li>
-        </ul>
+                <p>Self-employed | 2020-2023</p>
+                <ul>
+                    <li>Created unique SEO texts for clients</li>
+                    <li>Paid great attention to detail when editing and proofreading content to ensure accuracy,
+                        grammar, and style</li>
+                    <li>Possessed writing skills to create compelling and informative content that resonated with
+                        readers</li>
+                    <li>Experience in writing B2B, B2C articles</li>
+                </ul>
+            </section>
+           
+            <section>
+                <h2>MORE ABOUT ME</h2>
+                <p>I am an independent, efficient person who values time, good communication, complete information, and personal responsibility</p>
+                <p>I like to work with people who share the same qualities and whose business provides innovative solutions</p>
+                
+                <ul>
+                    <li>I am an authoritative, creative expert in creating unique, high-impact texts for websites</li>
+                    <li>I have highly professional skills and techniques to create content for websites and SEO optimization</li>
+                    <li>I teach young professionals web content and SEO techniques, creating unique, competent texts for any audience and search queries</li>
+                    <li>With more than three years of agency and freelance experience, you will receive polished, high-quality, highly-intelligent, and unique content from a reputable expert, marked by the highest level of professionalism, that will take your company to the next level</li>
+                    <li>I've run hundreds of campaigns for small- and medium-sized businesses with monthly budgets from <span class="currency">&#36;100</span> to <span class="currency">&#36;25,000</span></li>
+                    <li>I am the author of over <span>1000+</span> works</li>
+                    <li>The work will be original and more than <span>100%</span> quality</li>
+                </ul>
+                <p>Together, we can make a lasting positive impact</p>
+                <p>I've confident I can exceed your expectations</p>
             </section>
         </article>
     </main>
